--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
+.body {
+   font-family: Montserrat;
+   width: 1400px;
+   display: flex;
+   padding: 60px;
+}
 
+.header {
+   background-color: #cfcfcf;
+}
+
+.navigation-container {
+   display: flex;
+   flex-direction: row;
+   margin-right: 20px;
+}
+
+.navigation-item {
+   display: flex;
+   flex-direction: row;
+}
+
+.navigation-name {
+   padding-right: 30px;
+   color: #cfcfcf;
+   padding-top: 30px;
+   padding-bottom: 30px;
+}
+.navigation-span {
+   color: #000000;
+   font-size: 12px;
+}
+
+.navigation-title {
+   font-size: 14px;
+   color: #a06c1d;
+   margin-top: 24px;
+   padding-left: 200px;
+   font-weight: 700;
+   padding-top: 18px;
+   padding-right: 58px;
+}
+
+.navigation-title-2 {
+   font-size: 12px;
+   font-weight: 400;
+   color: #000000;
+   padding-bottom: 23px;
+}
