сделал секцию с фото
секция с фото

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@
    font-family: Montserrat;
    width: 1400px;
    display: flex;
-   padding: 60px;
+   padding-left: 20px;
+   padding-right: 20px;
+   padding-top: 40px;
+   padding-bottom: 40px;
 }
 
 .header {
@@ -46,4 +49,41 @@
    font-weight: 400;
    color: #000000;
    padding-bottom: 23px;
+}
+
+.main-section {
+   display: flex;
+   flex-direction: row;
+}
+
+.main-info {
+   margin-right: 80px;
+   margin-left: 215px;
+   margin-top: 279px;
+}
+
+.main-title {
+   font-size: 35px;
+   line-height: 40px;
+   color: #000000;
+   width: 350px;
+}
+
+.main.paragraph {
+   font-size: 15px;
+   line-height: 41px;
+}
+
+.main-button {
+   font-size: 15px;
+   width: 192px;
+   font-weight: 700;
+   padding-top: 12px;
+   padding-bottom: 12px;
+   padding-left: 30px;
+   padding-right: 30px;
+   color: #ffffff;
+   background: #950404;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+   border-radius: 5px;
 }
